--- a/FeudalChoicesMap/map/base.html
+++ b/FeudalChoicesMap/map/base.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="canvas.js" type="text/javascript">
+    </script>
 </head>
 <body>
-    <script src="canvas.js"></script>
+    <div>
+        <canvas id="map" width="400" height="400"></canvas>
+    </div>
+    <div>
+        <h1 id = "currentTick">0</h1>
+    </div>
 </body>
 </html>
