--- a/FeudalChoicesMap/map/base.html
+++ b/FeudalChoicesMap/map/base.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" type="text/javascript"></script>
     <script src="peasant.js" type="text/javascript"></script>
-    <script src="canvas.js" type="text/javascript">
-    </script>
+    <script src="canvas.js" type="text/javascript"></script>
+    <script src="socket.js" type="text/javascript"></script>
 </head>
+
 <body>
     <div>
         <canvas id="map" width="400" height="400"></canvas>
     </div>
     <div>
-        <h1 id = "currentTick">0</h1>
+        <h1 id="currentTick">0</h1>
     </div>
 </body>
+
 </html>
