--- a/FeudalChoicesMap/map/base.html
+++ b/FeudalChoicesMap/map/base.html
@@ -8,17 +8,18 @@
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" type="text/javascript"></script>
     <script src="peasant.js" type="text/javascript"></script>
-    <script src="canvas.js" type="text/javascript"></script>
-    <script src="socket.js" type="text/javascript"></script>
 </head>
 
 <body>
     <div>
-        <canvas id="map" width="400" height="400"></canvas>
+        <canvas id="map" width="200" height="200"></canvas>
     </div>
     <div>
         <h1 id="currentTick">0</h1>
     </div>
+    <input type="text" id="grid_text"></input>
+    <button id = 'sendButton'>SendGrid</button>
+    <script src="canvas.js" type="text/javascript"></script>
 </body>
 
 </html>
